# hedwig

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  config.hpp.in  core.cpp  core.hpp  main.cpp  playground.cpp  playground.hpp
